# nativeApp_Provision

./: .gitignore  README.md  SPEC.md  apply.py  local_services.py  provision.py  provision_gui.py  pyproject.toml  release.py  release_gui.py  requirements-dev.txt  run-platform.README.txt  run-platform.bat  start-gui.bat  start-release-gui.bat  warmup.py
build_worker/: __init__.py  records.py  worker.py
control_plane/: __init__.py  __main__.py  http_api.py  rollout.py  server.py
demo/: lab_serve.py
docs/: AI4BI_IMPORT_AUDIT.md  CV_REVIEWER_GUI_UPDATE_PLAN.md  LOCAL_CONTROL_PLANE_LAB.md  NATIVEAPP_DEPLOYMENT_RECOMMENDATION.md  OFFLINE_DEPLOY.md  REGISTRY_LOGICAL_SCHEMA.md  SIMPLE_STREAMLIT_TAURI_FOLDER_BUILDER.md  SIMPLE_STREAMLIT_TAURI_FOLDER_BUILDER_PHASE0_AND_DESIGN.md  STREAMLIT_DESKTOP_ATOMIC_UPDATE_IMPLEMENTATION_SPEC.md  STREAMLIT_DESKTOP_STORE_AND_SLOTS_DESIGN.md  STREAMLIT_DESKTOP_TEST_CASE_CATALOG.md  STREAMLIT_DESKTOP_TEST_SUMMARY_AND_NEXT_STEPS.md  TOOL_DEVELOPMENT_AND_DISTRIBUTION.md  VM_ACCEPTANCE_MATRIX.md  ai-runbook-A-cvviewer-into-nativeapp.html  ai-runbook-B-package-for-delivery.html  native-update-gui-step-by-step.html  offline-deploy.html  offline-deploy.template.html  release-e2e-step-by-step.html  release-gui-step-by-step.html  streamlit-desktop-step-by-step.html  streamlit-desktop-store-step-by-step.html
e2e/: build_gui_step_guide.py  build_html.py  build_streamlit_desktop_guide.py  build_streamlit_store_guide.py  capture_native_app_fleet.py  capture_provision_gui.py  capture_provision_gui_store.py  capture_screenshots.py  gui_flow_e2e.py  (+17 more)
(+157 files in other folders)
